// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a free 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "justifyContent": "center",
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#444444",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
          Object {
            "color": "#C0C0C0",
          },
        ]
      }
    >
      Free
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "flex": 0,
            "paddingLeft": 5,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
            Object {
              "flex": 0,
            },
          ]
        }
      >
        7:30
         - 
        8:30 AM
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tests different variations of classes Renders BlockComponent with a dr 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "justifyContent": "center",
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#444444",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
          Object {
            "color": "green",
          },
        ]
      }
    >
      Directed Reaserch
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "flex": 0,
            "paddingLeft": 5,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
            Object {
              "flex": 0,
            },
          ]
        }
      >
        12:14
         - 
        1:24 PM
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      Dr. Test
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      Room 102
    </Text>
  </View>
</View>
`;

exports[`Tests different variations of classes Renders BlockComponent with a major 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "justifyContent": "center",
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#444444",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
          Object {
            "color": "red",
          },
        ]
      }
    >
      Test Major
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "flex": 0,
            "paddingLeft": 5,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
            Object {
              "flex": 0,
            },
          ]
        }
      >
        7:30
         - 
        8:30 AM
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      Mr. Test
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      Fitness center
    </Text>
  </View>
</View>
`;

exports[`Tests different variations of classes Renders BlockComponent with a minor 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "justifyContent": "center",
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      ellipsizeMode="middle"
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#444444",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
          Object {
            "color": "gold",
          },
        ]
      }
    >
      Test minor
    </Text>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          Object {
            "flex": 0,
            "paddingLeft": 5,
          },
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-end",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#808080",
            },
            Object {
              "flex": 1,
              "textAlign": "right",
            },
            Object {
              "flex": 0,
            },
          ]
        }
      >
        12:14
         - 
        1:24 PM
      </Text>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      Mrs. Test
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      Room 334
    </Text>
  </View>
</View>
`;
